# Bear-Arms

./: .gitignore  BLINK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PLAN.md  README.md  SECURITY.md
config/: default.yaml
signatures/: suspicious_filenames.txt
src/: config.rs  main.rs  mcp_server.rs  quarantine.rs  rules.rs  scanner.rs  telemetry.rs  types.rs
src/analysis/: logs.rs  mod.rs
src/harden/: checks.rs  mod.rs
src/triage/: mod.rs  network.rs  persistence.rs  processes.rs
tests/: rules_tests.rs
