[package]
name = "bear-arms"
version = "0.1.0"
edition = "2021"
description = "Homelab antivirus/antimalware scanner for macOS and Linux"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
