[package]
name = "bear-arms"
version = "0.2.0"
edition = "2021"
description = "Blue team cybersecurity toolkit for macOS and Linux homelabs"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.31"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
